[package]
name = "oktac"
version = "0.1.0"
authors = ["mikelma <mikelma7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2"
pest_derive = "2"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
either = "1.6"
once_cell = "1.8.0"
clap = "3.0.0-beta.5"
console = "0.14.1"
ordered-float = "2.8"
indicatif = "0.16.2"
snailquote = "0.3"
