[package]
name = "oktac"
about = "Okta programming language compiler"
version = "0.2.0"
authors = ["mikelma <mikelma@tutanota.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2"
pest_derive = "2"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
either = "1.6"
once_cell = "1.9.0"
clap = { version = "3.1.2", features = ["derive"] }
console = "0.15.0"
ordered-float = { version = "2.10", features = ["serde"] }
snailquote = "0.3"
ptree = "0.4"
target-lexicon = "0.12.3"
petgraph = "0.6"
mlua = { version = "0.7.3", features = ["lua54", "serialize", "send"] }
serde = "1.0.136"
